working on news card slide animation, fixed hero and header text overlap

--- a/pages/news/News.module.scss
+++ b/pages/news/News.module.scss
@@ -1,3 +1,6 @@
+.container {
+}
+
 .btn-add-article {
   // margin: auto auto 1.5rem 1.2rem;
   margin: 1.5rem 1.2rem;
@@ -9,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-top: 100px;
 }
 
 .news-container {
@@ -17,6 +21,7 @@
   // grid-template-columns: repeat(2, 1fr);
   padding: 2%;
   max-height: 100vh;
+  animation: slideMe 2s ease-in;
 }
 
 .news-container:nth-child(even) {
@@ -105,9 +110,6 @@
   z-index: 1;
 }
 
-.news-card-header {
-}
-
 // .news-card {
 //   background-color: #ffffff;
 //   border: 2.7px solid #272262;
@@ -134,8 +136,6 @@
 #news_header2 {
   color: #272262;
   padding: 1%;
-  // min-width: 400px;
-  // max-width: 300px;
 }
 #news_header6 {
   color: #ff216d;
@@ -239,4 +239,48 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva,
     Verdana, sans-serif;
   font-weight: 600px;
+}
+
+/* .hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+@media(prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+} */
+
+@keyframes slideMe {
+  0% {
+    transform: skewX(0deg) translateX(-500px);
+  }
+  60% {
+    transform: translateX(0px);
+  }
+  62% {
+    transform: skewX(0deg) translateX(30px);
+  }
+
+  70% {
+    transform: skew(0deg);
+  }
+  80% {
+    transform: skew(0deg) translate(0);
+  }
+  90% {
+    transform: skew(0deg);
+  }
+  100% {
+    transform: skew(0deg);
+  }
 }
